--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "address": "localhost",
             "cwd": "${workspaceRoot}",
             "port": 5858,
-            "program": "${workspaceRoot}/src/server.ts",
+            "program": "${workspaceRoot}/src/index.ts",
             "outFiles": [ "${workspaceRoot}/dist/**/*.js" ]
         }
     ]
