--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "url": "https://github.com/MatheusBordin/SkynarWeb"
   },
   "devDependencies": {
+  },
+  "dependencies": {
     "@types/body-parser": "^1.16.3",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.0",
-    "typescript": "^2.3.2"
-  },
-  "dependencies": {
+    "typescript": "^2.3.2",
     "body-parser": "^1.17.2",
     "consign": "^0.1.6",
     "cors": "^2.8.3",
