CHange consign to requireAll

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "target": "es6",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "noEmitOnError": true,
         "sourceMap": true,
         "removeComments": true,
