--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.0",
-    "typescript": "^2.3.2",
     "body-parser": "^1.17.2",
-    "consign": "^0.1.6",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "reflect-metadata": "^0.1.10",
-    "typedi": "^0.5.2"
+    "require-all": "^2.2.0",
+    "typedi": "^0.5.2",
+    "typescript": "^2.3.2"
   }
 }
